--- a/index.adoc
+++ b/index.adoc
@@ -14,5 +14,6 @@ include::attributes.adoc[]
 include::chapter1/chapter1.adoc[]
 include::chapter2/chapter2.adoc[]
 include::chapter3/chapter3.adoc[]
+include::chapter4/chapter4.adoc[]
 
 :leveloffset: -1
